# LoKI

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  _temp.py  analyse_mmlu_llama.py  analyse_mmlu_llama_captum.py  analyse_mmlu_qwen2.py  analyse_mmlu_qwen2_captum.py  analysing_utils.ipynb  paper_md.md  pyproject.toml  tools.ipynb  utils.ipynb
.github/: copilot-instructions.md
.github/workflows/: ci.yml
kva_result/pos_json/Llama-3.1-8B-Instruct/: 10.json  20.json  30.json
kva_result/pos_json/Qwen2.5-0.5B-Instruct/: 10.json  20.json  30.json  5.json
lf_config/Reranker/: reranker.yaml  train.sh
lf_config/ToolACE/: toolace.yaml  train.sh
notebooks/deprecated/: README.md  analysing_utils.ipynb  utils.ipynb
scripts/: analyse_mmlu.py  create_loki_model.py  restore_loki_model.py  select_trainable_nodes.py
src/loki/: __init__.py  cli.py  constants.py  loki_linear.py  loki_llama_config.py  loki_llama_model.py  loki_qwen_config.py  loki_qwen_model.py
src/loki/core/: __init__.py  base_kva_model.py  base_loki_model.py  loki_linear.py
src/loki/kva/: __init__.py  kva_llama.py  kva_llama_captum.py  kva_qwen2.py  kva_qwen2_captum.py  utils.py
src/loki/models/: __init__.py  registry.py
src/loki/selection/: __init__.py  global_selection.py  layer_balanced.py  utils.py
src/loki/utils/: __init__.py  hdf5_manager.py  logging_config.py  model_utils.py
tests/: conftest.py
tests/integration/: test_model_workflow.py  test_real_models.py
tests/unit/: test_analyse_mmlu_script.py  test_hdf5_manager.py  test_loki_linear.py  test_model_cli_wrappers.py  test_model_utils_dynamic.py  test_registry.py  test_select_trainable_nodes_cli.py  test_selection.py  test_utils.py
